--- a/theme/templates/accounts/account_form.html
+++ b/theme/templates/accounts/account_form.html
@@ -17,8 +17,99 @@
 {% errors_for form %}
 
 <form class="account-form" method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
+    {% csrf_token %}
+    {{ form.errors }}
+    {{ form.non_field_errors }}
     <fieldset>
-    {% fields_for form %}
+        <h2>About</h2>
+
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.first_name  field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.last_name  field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.username  field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.email field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.title field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.profession  field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.subject_areas field_classes="col-md-12" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.details field_classes="col-md-12" %}
+        </div>
+        <div class="row">
+            {% include "includes/file_field.html" with field=form.cv field_classes="col-md-5" field_label="Choose a CV to Upload" %}
+            {% if form.initial.cv and form.initial.cv.url %}
+                <div class="col-md-7">
+                    Current CV on Profile:
+                    <a href="{{ form.initial.cv.url }}">{{ form.initial.cv.name }}</a>
+                </div>
+            {% endif %}
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <h2>Contact</h2>
+
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.organization_type field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.organization  field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.phone_2_type field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.phone_2 field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.phone_1_type field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.phone_1 field_classes="col-md-6" %}
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <h2>Photo</h2>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                {% if form.initial.picture and form.initial.picture.url %}
+                    <img src="{{ form.initial.picture.url }}" width="100%">
+                {% endif %}
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        {% if form.initial.picture and form.initial.picture.url %}
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <span class="btn btn-default btn-file">
+                        Replace <input type="file" id="{{ form.picture.auto_id }}" name="{{ form.picture.name }}" />
+                    </span>
+                    <button class="btn pull-right" id="{{ form.picture.name }}-clear_id" name="{{ form.picture.name }}-clear" value="clear">Remove</button>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        {% else %}
+            <div class="row">
+                <div class="col-md-2"></div>
+                {% include "includes/file_field.html" with field=form.picture field_classes="col-md-8" field_label="Choose a Photo to Upload" %}
+            </div>
+        {% endif %}
+    </fieldset>
+
+    <fieldset>
+        <h2>Change Password</h2>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.password1 field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.password2 field_classes="col-md-6" %}
+        </div>
+    </fieldset>
+
+    <fieldset>
         {% block account_form_actions %}
         <input class="hl-btn hl-btn-green" type="submit" value="{{ title }}">
         {% endblock %}
