Add the public/private checkbox to the profile edit and update get_profile usage which has been deprecated

--- a/theme/static/css/hydroshare_extends.css
+++ b/theme/static/css/hydroshare_extends.css
@@ -51,6 +51,14 @@ li.account{
   max-width: 100% !important;
 }
 
+.account-form input[type=checkbox] {
+    width: auto;
+    max-width: auto;
+}
+.account-form .form-group-checkbox label {
+    margin: auto 15px;
+}
+
 /*========================================
           MEZZANINE GENERIC
 ==========================================*/
