--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -1,5 +1,5 @@
 {% extends "pages/page.html" %}
-{% load geoanalytics_tags pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
+{% load  pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
 
 {# {% block title %}{{ user|best_name }}'s Resources{% endblock %}#}
 {% block title %}Resources{% endblock %}
