--- a/theme/templates/accounts/account_form.html
+++ b/theme/templates/accounts/account_form.html
@@ -24,10 +24,6 @@
         <h2>About</h2>
 
         <div class="row">
-            {% include "includes/checkbox_field.html" with field=form.public  field_classes="col-md-12" %}
-        </div>
-
-        <div class="row">
             {% include "includes/form_field.html" with field=form.first_name  field_classes="col-md-6" %}
             {% include "includes/form_field.html" with field=form.last_name  field_classes="col-md-6" %}
         </div>
@@ -37,7 +33,7 @@
         </div>
         <div class="row">
             {% include "includes/form_field.html" with field=form.title field_classes="col-md-6" %}
-            {% include "includes/form_field.html" with field=form.profession  field_classes="col-md-6" %}
+            {#{% include "includes/form_field.html" with field=form.profession  field_classes="col-md-6" %}#}
         </div>
         <div class="row">
             {% include "includes/form_field.html" with field=form.subject_areas field_classes="col-md-12" %}
@@ -57,51 +53,31 @@
     </fieldset>
 
     <fieldset>
-        <h2>Contact</h2>
+        <!-- <h2>Photo</h2> -->
 
         <div class="row">
-            {% include "includes/form_field.html" with field=form.organization_type field_classes="col-md-6" %}
-            {% include "includes/form_field.html" with field=form.organization  field_classes="col-md-6" %}
-        </div>
-        <div class="row">
-            {% include "includes/form_field.html" with field=form.phone_2_type field_classes="col-md-6" %}
-            {% include "includes/form_field.html" with field=form.phone_2 field_classes="col-md-6" %}
-        </div>
-        <div class="row">
-            {% include "includes/form_field.html" with field=form.phone_1_type field_classes="col-md-6" %}
-            {% include "includes/form_field.html" with field=form.phone_1 field_classes="col-md-6" %}
-        </div>
-    </fieldset>
-
-    <fieldset>
-        <h2>Photo</h2>
-
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
+            <div class="col-md-12">
                 {% if form.initial.picture and form.initial.picture.url %}
-                    <img src="{{ form.initial.picture.url }}" width="100%">
+                <img src="{{ form.initial.picture.url }}" width="100%">
                 {% endif %}
             </div>
-            <div class="col-md-2"></div>
         </div>
         <div class="row">&nbsp;</div>
         {% if form.initial.picture and form.initial.picture.url %}
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <span class="btn btn-default btn-file">
-                        Replace <input type="file" id="{{ form.picture.auto_id }}" name="{{ form.picture.name }}" />
-                    </span>
-                    <button class="btn pull-right" id="{{ form.picture.name }}-clear_id" name="{{ form.picture.name }}-clear" value="clear">Remove</button>
-                </div>
-                <div class="col-md-2"></div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <span class="btn btn-default btn-file">
+                    Replace <input type="file" id="{{ form.picture.auto_id }}" name="{{ form.picture.name }}" />
+                </span>
+                <button class="btn pull-right" id="{{ form.picture.name }}-clear_id" name="{{ form.picture.name }}-clear" value="clear">Remove</button>
             </div>
+            <div class="col-md-2"></div>
+        </div>
         {% else %}
-            <div class="row">
-                <div class="col-md-2"></div>
-                {% include "includes/file_field.html" with field=form.picture field_classes="col-md-8" field_label="Choose a Photo to Upload" %}
-            </div>
+        <div class="row">
+            {% include "includes/file_field.html" with field=form.picture field_classes="col-md-12" field_label="Choose a Photo to Upload" %}
+        </div>
         {% endif %}
     </fieldset>
 
@@ -110,6 +86,27 @@
         <div class="row">
             {% include "includes/form_field.html" with field=form.password1 field_classes="col-md-6" %}
             {% include "includes/form_field.html" with field=form.password2 field_classes="col-md-6" %}
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <h2>Contact</h2>
+
+        <div class="row">
+            {% include "includes/checkbox_field.html" with field=form.public  field_classes="col-md-12" %}
+        </div>
+
+        <div class="row">
+            {#{% include "includes/form_field.html" with field=form.organization_type field_classes="col-md-6" %}#}
+            {% include "includes/form_field.html" with field=form.organization  field_classes="col-md-12" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.phone_2_type field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.phone_2 field_classes="col-md-6" %}
+        </div>
+        <div class="row">
+            {% include "includes/form_field.html" with field=form.phone_1_type field_classes="col-md-6" %}
+            {% include "includes/form_field.html" with field=form.phone_1 field_classes="col-md-6" %}
         </div>
     </fieldset>
 
