Change some form labels and require the organization field, disable email field

--- a/theme/static/css/hydroshare_extends.css
+++ b/theme/static/css/hydroshare_extends.css
@@ -59,6 +59,10 @@ li.account{
     margin: auto 15px;
 }
 
+fieldset[disabled].form-group input {
+    background-color: #eee;
+}
+
 /*========================================
           MEZZANINE GENERIC
 ==========================================*/
