--- a/theme/templates/includes/checkbox_field.html
+++ b/theme/templates/includes/checkbox_field.html
@@ -1,7 +1,7 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <div class="form-group form-group-checkbox input_{{ field.id_for_label }} {{ field.field.type }}
+    <fieldset {% if readonly %}disabled="disabled"{% endif %} class="form-group form-group-checkbox input_{{ field.id_for_label }} {{ field.field.type }}
         {% if field.errors %} has-error{% endif %} {{ field_classes }}">
 
         {{ field }}
@@ -19,5 +19,5 @@
         {% elif field.help_text %}
             <p class="help-block" style="display: inline;">{{ field.help_text }}</p>
         {% endif %}
-    </div>
+    </fieldset>
 {% endif %}
