--- a/theme/templates/includes/form_field.html
+++ b/theme/templates/includes/form_field.html
@@ -1,7 +1,7 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    <div class="form-group input_{{ field.id_for_label }} {{ field.field.type }}
+    <fieldset {% if readonly %}disabled="disabled"{% endif %} class="form-group input_{{ field.id_for_label }} {{ field.field.type }}
     {% if field.errors %} has-error{% endif %} {{ field_classes }}">
 
     {% if field.label %}
@@ -13,11 +13,11 @@
     {% if field.errors %}
         <p class="help-block">
             {% for e in field.errors %}
-            {% if not forloop.first %} / {% endif %}{{ e }}
+                {% if not forloop.first %} / {% endif %}{{ e }}
             {% endfor %}
         </p>
     {% elif field.help_text %}
         <p class="help-block">{{ field.help_text }}</p>
     {% endif %}
-    </div>
+    </fieldset>
 {% endif %}
