--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -118,12 +118,10 @@
                             <div class="modal-content">
                               <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4 class="modal-title" id="submit-for-publication-title">Confirm resource file deletion</h4>
+                                <h4 class="modal-title" id="submit-for-publication-title">Confirm file deletion</h4>
                               </div>
                               <div class="modal-body">
-                                  <strong>THIS IS A PERMANENT ACTION.</strong> This will delete the resource file. A copy of your
-                                    resource file will not be retained by Hydroshare.  We recommend highly that you download the latest copy
-                                    of your resource file before confirming this action.
+                                  This will delete the file from the resource. Consider saving a copy if it is important to you.
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
