--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -153,7 +153,7 @@
                               </ul>
                             </div>
                         </td>
-                        {% if page.perms.change %}
+                        {% if page.perms.change and resource_type != "Geographic Raster Resource" %}
                         <td><button class="btn btn-success btn-block"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>
                         {% endif %}
                     </tr>
