reverted band editing work as it needs to be changed to use Pabitra's metadata editing work

--- a/hs_geo_raster_resource/templates/pages/rasterresource.html
+++ b/hs_geo_raster_resource/templates/pages/rasterresource.html
@@ -1,5 +1,5 @@
 {% extends "pages/genericresource.html" %}
-{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags inplace_edit %}
+{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
 
 {% block extra_content %}
 
@@ -16,35 +16,11 @@
                         </td>
                     </tr>
                 {% endfor %}
-                {% for band in cm.bands.all %}
-                   <tr>
-                        <th>"Name (band 1)"</th>
-                        <td>
-                            {% inplace_edit "band.bandName|linebreaksbr|safe"%}
-                        </td>
-                   </tr>
+                {% for attr, val in band_metadata.items %}
                     <tr>
-                        <th>"Variable (band 1)"</th>
+                        <th>{{ attr }}</th>
                         <td>
-                            {% inplace_edit "band.variableName|linebreaksbr|safe"%}
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>"Units (band 1)"</th>
-                        <td>
-                            {% inplace_edit "band.variableUnit|linebreaksbr|safe"%}
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>"Method (band 1)"</th>
-                        <td>
-                            {% inplace_edit "band.method|linebreaksbr|safe"%}
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>"Comment (band 1)"</th>
-                        <td>
-                            {% inplace_edit "band.comment|linebreaksbr|safe"%}
+                        {{ val }}
                         </td>
                     </tr>
                 {% endfor %}
