--- a/hs_core/templates/pages/resource-selection.html
+++ b/hs_core/templates/pages/resource-selection.html
@@ -31,6 +31,12 @@
             </select>
         </div>
     </div>
+    <div class="form-group">
+        <label for="" class="col-sm-2 control-label">Title</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="title" id="title" value="Untitled resource">
+        </div>
+    </div>
     <h3>Add your files here:</h3>
     <table class="table" id="file-list">
     <tbody id="files">
