mostly file permissions, also beginning to implement new workflow

--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -1,16 +1,10 @@
 {#{% extends 'pages/page.html' %}#}
 {% extends "pages/genericresource.html" %}
 {#{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}#}
-
-    <p> THIS is my Site LOngGI: {{ testsite.longitude }}</p>
-    <p> THis is my site Lat: {{ testsite.latitude }}</p>
-    <p> THIS is my Site code: {{ testsite.code }}</p>
-{#                    <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
 {#                    <select name="designees" id="view_groups-select" multiple class="form-control" size="20">#}
-{% block extra_content %}
-    <img id="vis" src={{visfile.resource_file.url}}>
-{% endblock %}
-
+{#                    <select name="designees" id="view_groups-select" multiple class="form-control" size="20">#}
+{#                        {% for u in groups %}#}
+{% load pages_tags mezzanine_tags comment_tags keyword_tags hydroshare_tags crispy_forms_tags staticfiles %}
 {##}
 {#{% block main %}#}
 {##}
@@ -29,276 +23,6 @@
 {##}
 {#            <table class="table table-striped" id="downloads">#}
 {#                {% if resfiles %}#}
-{#                {% for f in resfiles %}#}
-{#                <tr>#}
-{#                    <td>{{ f.resource_file.name|slice:"33:" }}</td>#}
-{#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
-{#                    <td><a class="btn btn-primary btn-block" href="{{ f.resource_file.url }}">Download ({{ f.resource_file.size|filesizeformat }})</a></td>#}
-{##}
-{#                </tr>#}
-{#                {% endfor %}#}
-{#                {% endif %}#}
-{#                    <td></td>#}
-{#                    <td>#}
-{#                        <div class="btn-group">#}
-{#                          <a type="button" class="btn btn-primary" href="{{ bag.bag.url }}">Export all</a>#}
-{#                          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">#}
-{#                            <span class="caret"></span>#}
-{#                            <span class="sr-only">Toggle Dropdown</span>#}
-{#                          </button>#}
-{#                          <ul class="dropdown-menu" role="menu">#}
-{#                              {% for b in cm.bags.all %}#}
-{#                                <li><a href="{{ b.bag.url }}" style="color:black;">{{ b.timestamp|date }}, {{ b.timestamp|time }} ({{ b.bag.size|filesizeformat }})</a></li>#}
-{#                              {% endfor %}#}
-{#                          </ul>#}
-{#                        </div>#}
-{#                    </td>#}
-{##}
-{#                </tr>#}
-{#            </table>#}
-{#        </div>#}
-{#</div>#}
-{##}
-{#<div class="btn-toolbar" style="padding-bottom: 0.5em;">#}
-{#    {% if page.perms.change %}#}
-{#    <a class="btn btn-primary" id="share" href="#sharing">Share</a>#}
-{#    <a class="btn btn-primary" href="/admin/pages/page/{{ page.pk }}" id="edit">Edit</a>#}
-{#    {% endif %}#}
-{##}
-{#    {% if page.perms.delete %}#}
-{#    <a class="btn btn-primary" href="/admin/pages/page/{{ page.pk }}" id="switch-to-static" data-toggle="tooltip" data-placement="top"#}
-{#       title="This converts the most up to date data, and converts the resource to a non referenced time series">Switch to Static</a>#}
-{#    <button class="btn btn-danger" id="delete"  data-toggle="modal" data-target="#delete-resource-dialog">Delete</button>#}
-{#    {% endif %}#}
-{#</div>#}
-{##}
-{#<div class="row">#}
-{#    <div class="col-md-12">{# <img src="/placeholder.png"></div> #}
-{##}
-{#        <table class="table">#}
-{#            <tr><th>Resource Type</th><td>{{ resource_type }}</td></tr>#}
-{#            <tr><th>URL (type: '{{ reference_type|upper }}')</th><td>{{ url }}</tr>#}
-{#            {% if site_name %}<tr><th>Site</th><td>{{ site_name }}</td></tr>{% endif %}#}
-{#            {% if site_code %}<tr><th>Site Code</th><td>{{ site_code }}</td></tr>{% endif %}#}
-{#            {% if variable_name %}<tr><th>Variable</th><td>{{ variable_name }}</td></tr>{% endif %}#}
-{#            {% if variable_code %}<tr><th>Variable Code</th><td>{{ variable_code }}</td></tr>{% endif %}#}
-{#            <tr><th>Owner</th><td>{{ cm.user|contact|safe }}</td></tr>#}
-{#            <tr><th>Added on</th><td>{{ cm.created|date }}</td></tr>#}
-{#            <tr><th>Start Date</th><td>{{ cm.start_date }}</td></tr>#}
-{#            <tr><th>Last updated by</th><td>{% if cm.last_changed_by %}{{ cm.last_changed_by|contact|safe }}{% endif %}</td></tr>#}
-{#            <tr><th>Updated on</th><td>{{ cm.updated|date }}</td></tr>#}
-{#            <tr><th>Keywords</th><td>{{ kws|join:', ' }}</td></tr>#}
-{#            <tr><th>Permalink</th><td><a id="permalink" href="http://{{ request.get_host }}/r/{{ cm.short_id }}/">http://{{ request.get_host }}/r/{{ cm.short_id }}/</a></td></tr>#}
-{#        </table>#}
-{##}
-{#    </div>#}
-{#</div>#}
-{##}
-{#    <div class="row">#}
-{#        <div class="col-md-12">#}
-{#            <h2>Resource Description</h2>#}
-{##}
-{#            {% if cm.content %}#}
-{#                {% editable cm.content %}#}
-{#                <h4>Abstract</h4>#}
-{#                {{ cm.content|richtext_filters|safe }}#}
-{#                {% endeditable %}#}
-{#            {% endif %}#}
-{##}
-{#            <h4>References</h4>#}
-{#            <ul class="list-unstyled">#}
-{#            {% for citation in citations %}#}
-{#                <li>{{ citation }}</li>#}
-{#            {% empty %}#}
-{#                <p><strong>No citations listed</strong></p>#}
-{#            {% endfor %}#}
-{#            </ul>#}
-{#            {% if page.perms.change %}#}
-{#                <button class="btn btn-primary" id="add-reference" data-toggle="modal" data-target="#add-reference-dialog">Add reference</button>#}
-{#            {% endif %}#}
-{##}
-{##}
-{#            <h4>Other Metadata</h4>#}
-{#            <table class="table table-condensed">#}
-{#            {% for term in dublin_core %}#}
-{#                <tr>#}
-{#                    <th>{{ term|dcterm }}</th>#}
-{#                    <td>{{ term.content }}</td>#}
-{#                </tr>#}
-{#            {% endfor %}#}
-{#            </table>#}
-{#            {% if page.perms.change %}#}
-{#                <button class="btn btn-primary" id="add-dcterm" data-toggle="modal" data-target="#add-dcterm-dialog">Add metadata term</button>#}
-{#            {% endif %}#}
-{##}
-{##}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#    <div class="row" id="sharing">#}
-{#        <div class="col-lg-12">#}
-{#        <h2>Sharing</h2>#}
-{##}
-{#        {% editable cm.public %}#}
-{#            {% if cm.public %}#}
-{#                This resource can be viewed and downloaded by anyone.#}
-{#            {% else %}#}
-{#                This resource can be viewed and downloaded only by designated users or research groups.#}
-{#            {% endif %}#}
-{#        {% endeditable %}#}
-{##}
-{#        <div style="padding-top:0.5em">#}
-{#        {% if user == cm.user %}#}
-{#            You are the owner of this resource.#}
-{#        {% elif is_edit_user %}#}
-{#            You have been given specific permission to edit this resource.#}
-{#        {% elif in_edit_group %}#}
-{#            Your research group(s) have been given specific permission to edit this resource.#}
-{#        {% elif is_view_user %}#}
-{#            You have been given specific permission to view this resource.#}
-{#        {% elif in_view_group %}#}
-{#            Your research group(s) have been given specific permission to view this resource.#}
-{#        {% endif %}#}
-{#        </div>#}
-{##}
-{#        {% if page.perms.change %}#}
-{#        <div class="panel-group" id="accordion">#}
-{#          <div class="panel panel-default">#}
-{#            <div class="panel-heading">#}
-{#              <h4 class="panel-title">#}
-{#                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">#}
-{#                  Users with full read/write permissions on this resource#}
-{#                </a>#}
-{#              </h4>#}
-{#            </div>#}
-{#            <div id="collapseOne" class="panel-collapse collapse in">#}
-{#              <div class="panel-body">#}
-{#                    <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                        {% csrf_token %}#}
-{#                        <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
-{#                        <select name="designees" id="owners-select" multiple class="form-control" size="20">#}
-{#                            {% for u in users %}#}
-{#                                <option value="{{ u.pk }}" {% if u in owners %}selected{% endif %}>{{ u|best_name }}</option>#}
-{#                            {% endfor %}#}
-{#                        </select>#}
-{#                        <input name="t" value="owners" type="hidden"/>#}
-{#                        <button type="submit" class="btn btn-primary btn-block">Update access list</button>#}
-{#                    </form>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="panel panel-default">#}
-{#            <div class="panel-heading">#}
-{#              <h4 class="panel-title">#}
-{#                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">#}
-{#                  Users who can edit the content of this resource#}
-{#                </a>#}
-{#              </h4>#}
-{#            </div>#}
-{#            <div id="collapseTwo" class="panel-collapse collapse">#}
-{#              <div class="panel-body">#}
-{#                <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                    {% csrf_token %}#}
-{#                    <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
-{#                    <select name="designees" id="edit_users-select" multiple class="form-control" size="20">#}
-{#                        {% for u in users %}#}
-{#                            <option value="{{ u.pk }}" {% if u in edit_users %}selected{% endif %}>{{ u|best_name }}</option>#}
-{#                        {% endfor %}#}
-{#                    </select>#}
-{#                    <input name="t" value="edit_users" type="hidden"/>#}
-{#                    <button type="submit" class="btn btn-primary btn-block">Update access list</button>#}
-{#                </form>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="panel panel-default">#}
-{#            <div class="panel-heading">#}
-{#              <h4 class="panel-title">#}
-{#                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">#}
-{#                  Research groups that can edit the content of this resource#}
-{#                </a>#}
-{#              </h4>#}
-{#            </div>#}
-{#            <div id="collapseThree" class="panel-collapse collapse">#}
-{#              <div class="panel-body">#}
-{#                <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                    <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                        {% csrf_token %}#}
-{#                        <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
-{#                        <select name="designees" id="edit_groups-select" multiple class="form-control" size="20">#}
-{#                            {% for u in groups %}#}
-{#                                <option value="{{ u.pk }}" {% if u in edit_groups %}selected{% endif %}>{{ u }}</option>#}
-{#                            {% endfor %}#}
-{#                        </select>#}
-{#                        <input name="t" value="edit_groups" type="hidden"/>#}
-{#                        <button type="submit" class="btn btn-primary btn-block">Update access list</button>#}
-{#                    </form>#}
-{#                </form>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          {% if not cm.public %}#}
-{#          <div class="panel panel-default">#}
-{#            <div class="panel-heading">#}
-{#              <h4 class="panel-title">#}
-{#                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">#}
-{#                  Users who can view and download the resource#}
-{#                </a>#}
-{#              </h4>#}
-{#            </div>#}
-{#            <div id="collapseFour" class="panel-collapse collapse">#}
-{#              <div class="panel-body">#}
-{#                <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                    {% csrf_token %}#}
-{#                    <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
-{#                    <select name="designees" id="view_users-select" multiple class="form-control" size="20">#}
-{#                        {% for u in users %}#}
-{#                            <option value="{{ u.pk }}" {% if u in view_users %}selected{% endif %}>{{ u|best_name }}</option>#}
-{#                        {% endfor %}#}
-{#                    </select>#}
-{#                    <input name="t" value="view_users" type="hidden"/>#}
-{#                    <button type="submit" class="btn btn-primary btn-block">Update access list</button>#}
-{#                </form>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div class="panel panel-default">#}
-{#            <div class="panel-heading">#}
-{#              <h4 class="panel-title">#}
-{#                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">#}
-{#                  Research groups that can view and download the resource#}
-{#                </a>#}
-{#              </h4>#}
-{#            </div>#}
-{#            <div id="collapseFive" class="panel-collapse collapse">#}
-{#              <div class="panel-body">#}
-{#                <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/" method="POST">#}
-{#                    {% csrf_token %}#}
-{#                    <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
-{#                    <select name="designees" id="view_groups-select" multiple class="form-control" size="20">#}
-{#                        {% for u in groups %}#}
-{#                            <option value="{{ u.pk }}" {% if u in view_groups %}selected{% endif %}>{{ u }}</option>#}
-{#                        {% endfor %}#}
-{#                    </select>#}
-{#                    <input name="t" value="view_groups" type="hidden"/>#}
-{#                    <button type="submit" class="btn btn-primary btn-block">Update access list</button>#}
-{#                </form>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{#          {% endif %}#}
-{##}
-{#        </div>#}
-{##}
-{#        {% endif %}#}
-{##}
-{##}
-{#    </div>#}
-{#    </div>#}
 {#                {% for f in resfiles %}#}
 {#                <tr>#}
 {#                    <td>{{ f.resource_file.name|slice:"33:" }}</td>#}
