mostly file permissions, also beginning to implement new workflow

--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -2,21 +2,13 @@
 {% extends "pages/genericresource.html" %}
 {#{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}#}
 
-
-{% load pages_tags mezzanine_tags comment_tags keyword_tags hydroshare_tags crispy_forms_tags staticfiles %}
-
-
-{% with page.get_content_model as cm %}
-
-{% block extra_content %}
     <p> THis is my site NaME: {{ testsite.name }}</p>
     <p> THIS is my Site LOngGI: {{ testsite.longitude }}</p>
     <p> THis is my site Lat: {{ testsite.latitude }}</p>
     <p> THIS is my Site code: {{ testsite.code }}</p>
-    <img id="vis" src={{visfile.resource_file.url}}>
-{% endblock %}
-
-{% endwith %}
+{#                    <small>Hold down "Control", or "Command" on a Mac, to select more than one.</small>#}
+{#                    <select name="designees" id="view_groups-select" multiple class="form-control" size="20">#}
+{% load pages_tags mezzanine_tags comment_tags keyword_tags hydroshare_tags crispy_forms_tags staticfiles %}
 {##}
 {#{% block main %}#}
 {##}
