--- a/hs_model_program/templates/pages/create-hydro-program.html
+++ b/hs_model_program/templates/pages/create-hydro-program.html
@@ -344,22 +344,21 @@
     <br>
 
 
-    <h3>  Missing? </h3>
-
-    <!--executable code-->
-    <div class="form-group">
-        <label for="" class="col-sm-2 control-label">Executable Code</label>
-        <div class="col-sm-10">
-      <input type="text" class="form-control" id="exec_code" name='exec_code' placeholder="">
-    </div>
-    </div>
-
-    <!--build/installation notes-->
-    <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Build/Installation Notes</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="build_notes" name='build_notes' placeholder="">
-    </div>
+{#    <h3>  Missing? </h3>#}
+{#    <!--executable code-->#}
+{#    <div class="form-group">#}
+{#        <label for="" class="col-sm-2 control-label">Executable Code</label>#}
+{#        <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" id="exec_code" name='exec_code' placeholder="">#}
+{#    </div>#}
+{#    </div>#}
+{##}
+{#    <!--build/installation notes-->#}
+{#    <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Build/Installation Notes</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" id="build_notes" name='build_notes' placeholder="">#}
+{#    </div>#}
 </div>
 
   <div class="form-group">
